--- a/Home.html
+++ b/Home.html
@@ -26,22 +26,25 @@
 
     <main>
       <section><!--NavBar-->
-            <nav class="navbar navbar-expand-lg bg-primary">
+            <nav class="navbar navbar-expand-lg bg-primary" style="font-size: 1.5rem">
                 <div class="container-fluid">
-                  <a class="navbar-brand bold" href="#">Ricardo K.</a>
+                  <a class="navbar-brand bold" href="Home.html" style="font-size: 2rem;">Ricardo K.</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="Home.html">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="Home.html"></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Projetos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre</a>
+                        <a class="ms-2 nav-link" href="#">Sobre</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="ms-2 nav-link" href="#">Contato</a>
                       </li>
                     </ul>
                   </div>
@@ -50,7 +53,7 @@
       </section>
       <section><!--Conteudo-->
             <div class="m-5 text-light display-6"><!--Texto intro-->
-              Meu nome é Ricardo Kakiuchi, tenho 30 anos, sou formado em Análise e desenvolvimento de sistemas na FATEC-Itu. <br>
+              Meu nome é <b style="color: #18eeb8;">Ricardo Kakiuchi</b>, tenho 30 anos, sou formado em Análise e desenvolvimento de sistemas na FATEC-Itu. <br>
               <h2 class="mt-5 text-center">Previa dos meus projetos: </h2>
             </div>
             <div id="carouselExampleCaptions" class="carousel slide"><!--Carousel-->
