--- a/Home.html
+++ b/Home.html
@@ -56,32 +56,48 @@
               Meu nome é <b style="color: #18eeb8;">Ricardo Kakiuchi</b>, tenho 30 anos, sou formado em Análise e desenvolvimento de sistemas na FATEC-Itu. <br>
               <h2 class="mt-5 text-center">Previa dos meus projetos: </h2>
             </div>
-            <div id="carouselExampleCaptions" class="carousel slide"><!--Carousel-->
+            <div id="carouselExampleCaptions" class="carousel slide carousel-fade"><!--Carousel-->
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
               </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="..." class="d-block w-100" alt="...">
+              <div class="carousel-inner ">
+                <div class="carousel-item active d-flex justify-content-center">
+                  <img src="img/agenciabootstrap.png" class="d-block w-50" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5 style="color: #18eeb8;">Projeto Agência de viagens</h5>
+                    <b style="color: #18eeb8;">Feito utilizando muitos e apenas aspectos do bootstrap</b>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-item d-flex justify-content-center">
+                  <img src="img/MenuProj.png" class="d-block w-50" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5 style="color: black;">Projeto menu 1</h5>
+                    <p style="color: black;">Backend e Frontend</p>
                   </div>
                 </div>
-                <div class="carousel-item">
-                  <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-item d-flex justify-content-center">
+                  <img src="img/Menuproj2.png" class="d-block w-50" alt="...">
                   <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5 style="color: black;">Projeto menu 1</h5>
+                    <p style="color: black;">Campo para preencher corretamente com mascara do jquery</p>
+                  </div>
+                </div>
+                <div class="carousel-item d-flex justify-content-center">
+                  <img src="img/Menuproj3.png" class="d-block w-50" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 style="color: black;">Projeto menu 1</h5>
+                    <p style="color: black;">Resultado da compra utilizando JavaScript</p>
+                  </div>
+                </div>
+                <div class="carousel-item d-flex justify-content-center">
+                  <img src="img/Pesquisa git.png" class="d-block w-25" alt="...">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 style="color: black;">Projeto pesquisa de Usuario Github</h5>
+                    <p style="color: #18eeb8;">Aplicando conhecimento da linguagem JavaScript</p>
                   </div>
                 </div>
               </div>
