--- a/Home.html
+++ b/Home.html
@@ -112,6 +112,9 @@
             </div>
         <div class="mt-5 text-light text-center"><!--Curriculo-->
           <h1>Curriculo:</h1>
+          <div class="d-flex justify-content-center">
+            <img src="img/Curriculo Ricardo K.png" class="d-block w-50" alt="...">
+          </div>
         </div>
       </section>
 
