--- a/Projects.html
+++ b/Projects.html
@@ -92,6 +92,10 @@
             <button class="nav-link" id="git-tab" data-bs-toggle="tab" data-bs-target="#git-tab-pane" type="button"
               role="tab" aria-controls="git-tab-pane" aria-selected="false">Profile GitHub</button>
           </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="breve-tab" data-bs-toggle="tab" data-bs-target="#breve-tab-pane" type="button"
+              role="tab" aria-controls="breve-tab-pane" aria-selected="false">Em Breve</button>
+          </li>
         </ul>
         <!-- -------------Cadastro de alunos----------------------------------------------------------------------------------------------------------------------------- -->
         <div class="tab-content" id="myTabContent">
@@ -188,6 +192,10 @@
 
                 </tbody>
               </table>
+            </div>
+            <div class="text-success text-end" style="font-size: 40px;">
+              <br>
+              <a href="https://github.com/RkSNiGhT/CadastroAluno" target="_blank">Link do Projeto no GitHub</a>
             </div>
           </div>
 
@@ -314,6 +322,10 @@
               <div id="output">
 
               </div>
+            </div>
+            <div class="text-success text-end" style="font-size: 40px;">
+              <br>
+              <a href="https://github.com/RkSNiGhT/ProjetoMenu" target="_blank">Link do Projeto no GitHub</a>
             </div>
 
           </div>
@@ -671,6 +683,10 @@
                 </ul>
               </footer>
             </div>
+            <div class="text-success text-end" style="font-size: 40px;">
+              <br>
+              <a href="https://github.com/RkSNiGhT/ProjTravelAgency" target="_blank">Link do Projeto no GitHub</a>
+            </div>
           </div>
           <!-- --------------------- Fim do Projeto Agencia de Viagens -------------------------------------------------------------------------------------------- -->
 
@@ -722,8 +738,12 @@
                 </section>
               </main>
             </div>
-
+            <div class="text-success text-end" style="font-size: 40px;">
+              <br>
+              <a href="https://github.com/RkSNiGhT/AulaProjProfileGitJSON" target="_blank">Link do Projeto no GitHub</a>
+            </div>
           </div>
+          
           <!-- --------------------- Fim do Projeto Profile github ------------------------------------------------------------------------------------------------------- -->
         </div>
       </div>
