--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
   <main class="row">
     <section class="col-2"><!--NavBar-->
       <div class="d-flex  text-white bg-dark flex-column" style="height: 100%;">
-        <a href="Home.html" class="mb-3 text-white text-decoration-none">
+        <a href="index.html" class="mb-3 text-white text-decoration-none">
           <svg class="bi me-2" width="40" height="40">
             <use xlink:href="#bootstrap"></use>
           </svg>
@@ -43,7 +43,7 @@
         <hr>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a href="Home.html" class="nav-link" aria-current="page" style="font-size: 50px;">
+            <a href="index.html" class="nav-link" aria-current="page" style="font-size: 50px;">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
               <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
             </svg>
