--- a/Projects.html
+++ b/Projects.html
@@ -19,8 +19,8 @@
 
   <main class="row">
     <section class="col-2 d-block"><!--NavBar-->
-      <div class="text-white bg-dark flex-column navbar-expand-xxl text-center" style="height: 100%;">
-        <a href="index.html" class="text-white text-decoration-none me-5">
+      <div class="text-white bg-dark navbar-expand-xxl text-center" style="height: 100%; max-width: 240px; min-width: 200px;">
+        <a href="index.html" class="text-white text-decoration-none">
           <svg class="bi" width="40" height="40">
             <use xlink:href="#bootstrap"></use>
           </svg>
@@ -381,7 +381,7 @@
             </div>
             <nav class="navbar navbar-expand-md navbar-dark bg-primary">
               <div class="container-fluid">
-                <img src="bife.jpg" width="60" alt="Logo" class="me-2">
+                <img src="projects/assets/bife.jpg" width="60" alt="Logo" class="me-2">
                 <a class="navbar-brand me-5 active" href="home.html">Agência de Viagens</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                   data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -699,7 +699,7 @@
               <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <div class="col-12 col-md-4 d-flex align-items-center justify-content-md-start justify-content-center">
                   <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <img src="images/logo.png" width="60" />
+                    
                   </a>
                   <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
                 </div>
