--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <main class="row">
     <section class="col-2 d-block"><!--NavBar-->
-      <div class="text-white bg-dark flex-column navbar-expand-xxl text-center" style="height: 100%;">
-        <a href="index.html" class="text-white text-decoration-none me-5">
+      <div class="text-white bg-dark navbar-expand-xxl text-center" style="height: 100%; max-width: 240px; min-width: 200px;">
+        <a href="index.html" class="text-white text-decoration-none">
           <svg class="bi" width="40" height="40">
             <use xlink:href="#bootstrap"></use>
           </svg>
