--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ricardo Kakiuchi Intro</title>
+  <title>Ricardo Kakiuchi</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="script/style.css">
@@ -47,9 +47,9 @@
         </div>
 
         <hr>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <button class="navbar-toggler text-center" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon rounded-3" style="background-color: white; color: black;">--</span>
+        <span class="navbar-toggler-icon rounded-3" style="background-color: white; color: black; width: 100px;">III</span>
         </button>
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <ul class="nav ">
@@ -100,7 +100,7 @@
         <hr>
       </div>
     </section>
-    <section class="col-10"><!--Conteudo-->
+    <section class="col-8 col-lg-10" style="min-width: 50rem;"><!--Conteudo-->
 
         <div class="row">
             <div class="container col-5 bg-dark mt-5 p-3 rounded-5">
