melhorias na visibilidade

--- a/Projects.html
+++ b/Projects.html
@@ -103,7 +103,7 @@
     <section class="col-8 col-lg-10 bg-dark" style="min-width: 50rem;"><!--Conteudo------------------------------------------------------------------------------------------------------------>
 
       <div class="display-5 mt-5 text-success text-center" style="font-size: 100px;">
-        Área de Projetos
+        <strong>Área de Projetos</strong>
       </div>
 
 
@@ -136,14 +136,14 @@
           <div class="tab-pane fade show active justify-content-center" id="home-tab-pane" role="tabpanel"
             aria-labelledby="home-tab" tabindex="0">
             <div class="display-6 text-center text-primary">
-              Projeto Cadastro de Alunos
-              <div style="color: darkviolet;">
-                Projeto feito utilizando: Bootstrap e JavaScript
+              Cadastro de Alunos
+              <div style="color: #9400d3;">
+                Feito utilizando: Bootstrap e JavaScript
               </div>
             </div>
             <header>
               <div class="mt-2 text-center fs-1 fw-light">
-                Cadastro de Alunos
+                Cadastrar Alunos
               </div>
             </header>
 
@@ -240,9 +240,9 @@
 
           <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
             <div class="display-6 text-center text-primary">
-              Projeto Restaurant Menu
+              Restaurant Menu
               <div style="color: darkviolet;">
-                Projeto feito utilizando: Bootstrap, JavaScript e JQuery.
+                Feito utilizando: Bootstrap, JavaScript e JQuery.
               </div>
             </div>
 
@@ -370,10 +370,10 @@
 
           <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
             <div class="display-6 text-primary text-center">
-              Projeto Agencia de Viagens<br><br>
-              (Projeto feito para utilizar muitos recursos que o bootstrap pode oferecer)<br>
+              Agencia de Viagens<br><br>
+              (A proposta é para utilizar muitos recursos que o bootstrap pode oferecer)<br>
               <div style="color: darkviolet;">
-                Projeto feito utilizando: Bootstrap.
+                Feito utilizando: Bootstrap.
               </div>
             </div>
             <div class="alert alert-primary" role="alert">
@@ -729,10 +729,10 @@
 
           <div class="tab-pane fade" id="git-tab-pane" role="tabpanel" aria-labelledby="git-tab" tabindex="0">
             <div class="display-6 text-center text-primary">
-              Projeto Profile GitHub<br>
+              Profile GitHub<br>
               Informações pesquisadas pelo site GitHub.
               <div style="color: darkviolet;">
-                Projeto feito utilizando: Bootstrap, JavaScript e JSON
+                Feito utilizando: Bootstrap, JavaScript e JSON
               </div>
             </div>
 
@@ -779,6 +779,9 @@
           </div>
           
           <!-- --------------------- Fim do Projeto Profile github ------------------------------------------------------------------------------------------------------- -->
+          <div class="tab-pane fade" id="breve-tab-pane" role="tabpanel" aria-labelledby="breve-tab" tabindex="0">
+            <div class="tab-pane" style="height: 100%;"></div>
+          </div>
         </div>
       </div>
 
