--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
               <p style="color: black;">Backend e Frontend</p>
             </div>
           </div>
-          <div class="carousel-item d-flex justify-content-center">
+          <div class="carousel-item d-flex justify-content-center ">
             <img src="img/Menuproj2.png" class="d-block w-50" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption  d-block">
               <h5 style="color: black;">Projeto menu 1</h5>
-              <p style="color: black;">Campo para preencher corretamente com mascara do jquery</p>
+              <p class="textbg" style="color: rgb(255, 255, 255);">Campo para preencher corretamente com mascara do jquery</p>
             </div>
           </div>
           <div class="carousel-item d-flex justify-content-center">
             <img src="img/Menuproj3.png" class="d-block w-50" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 style="color: black;">Projeto menu 1</h5>
-              <p style="color: black;">Resultado da compra utilizando JavaScript</p>
+            <div class="carousel-caption d-block">
+              <h5 class="textbg" style="color: rgb(255, 255, 255);">Projeto menu 1</h5>
+              <p class="textbg" style="color: rgb(255, 255, 255);">Resultado da compra utilizando JavaScript</p>
             </div>
           </div>
           <div class="carousel-item d-flex justify-content-center">
