--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
   </header>
 
   <main class="row">
-    <section class="col-2 d-block"><!--NavBar-->
+    <section class="col-2 d-block "><!--NavBar-->
       <div class="text-white bg-dark navbar-expand-xxl text-center" style="height: 100%; max-width: 240px; min-width: 200px;">
         <a href="index.html" class="text-white text-decoration-none">
           <svg class="bi" width="40" height="40">
@@ -114,7 +114,7 @@
               </svg>
             ricgames1@hotmail.com
         </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
 
 
@@ -133,7 +133,7 @@
 
     <div class="footer">
       <nav class="navbar bg-dark">
-        <div class="container-fluid justify-content-end">
+        <div class="container-fluid justify-content-end h-100">
           <span class="navbar-text text-white">
             ricgames1@hotmail.com<br> Feito por Ricardo Kakiuchi
           </span>
